TRUNK
=============
* mxEvaluate() function renamed to mxEval().  mxEval() was chosen to suggest similarity with the eval() function.

Release 0.1.2-708
=============
* Added R help documentation for omxCheckCloseEnough(), omxCheckWithinPercentError(), 
	omxCheckTrue(), omxCheckEquals(), and omxCheckSetEquals()

* (mxMatrix) Fixed a bug in construction of symmetric matrixes.
    - now supports lower, standardized, and subdiagonal matrices.

Release 0.1 (August 3, 2009)
============================
* (mxEvaluate) mxEvaluate translates MxMatrix references, MxAlgebra references,  MxObjectiveFunction references, and label references.

* (mxOptions) added 'reset' argument to mxOptions()

* (mxPath) renamed 'start' argument of mxPath() to 'values'
    - renamed 'name' argument of mxPath() to 'labels'
    - renamed 'boundMin' argument of mxPath() to 'lbound'
    - renamed 'boundMax' argument of mxPath() to 'ubound'
    - eliminated 'ciLower' argument of mxPath()
    - eliminated 'ciUpper' argument of mxPath()
    - eliminated 'description' argument of mxPath()

* (dimnames) implemented dimnames(x) for MxMatrix objects
    - implemented dimnames(x) <- value for MxMatrix objects
    - implemented dimnames(x) for MxAlgebra objects
    - implemented dimnames(x) <- value for MxAlgebra objects

* (mxMatrix) added 'dimnames' argument to mxMatrix()

* (mxData) renamed 'vector' argument of mxData() to 'means'