@@ -14,4 +14,4 @@ License: Apache License 2.0
 Depends: methods, snowfall
 LazyLoad: yes
 LazyData: yes
-Collate: MxData.R MxReservedNames.R MxNamespace.R MxUntitled.R MxCharOrNumber.R MxMatrixOperators.R MxMatrix.R DiagMatrix.R FullMatrix.R IdenMatrix.R LowerMatrix.R SdiagMatrix.R StandMatrix.R SymmMatrix.R UnitMatrix.R ZeroMatrix.R MxAlgebra.R MxEval.R MxPath.R MxObjectiveFunction.R MxBounds.R MxConstraint.R MxTypes.R MxModel.R MxRAMModel.R MxModelDisplay.R MxFlatModel.R MxMultiModel.R MxModelFunctions.R MxUnitTesting.R MxAlgebraObjective.R MxFIMLObjective.R MxMLObjective.R MxRAMObjective.R MxRObjective.R MxReferences.R MxRun.R MxSummary.R MxSwift.R MxOptions.R OriginalMx.R zzz.R
+Collate: MxData.R MxReservedNames.R MxNamespace.R MxUntitled.R MxCharOrNumber.R MxMatrixOperators.R MxMatrix.R DiagMatrix.R FullMatrix.R IdenMatrix.R LowerMatrix.R SdiagMatrix.R StandMatrix.R SymmMatrix.R UnitMatrix.R ZeroMatrix.R MxAlgebra.R MxEval.R MxPath.R MxObjectiveFunction.R MxBounds.R MxConstraint.R MxTypes.R MxModel.R MxRAMModel.R MxModelDisplay.R MxFlatModel.R MxMultiModel.R MxModelFunctions.R MxUnitTesting.R MxAlgebraObjective.R MxFIMLObjective.R MxMLObjective.R MxRAMObjective.R MxRObjective.R MxReferences.R MxRun.R MxSummary.R MxSwift.R MxOptions.R OriginalMx.R MxVersion.R zzz.R
